Revert text-shadow change until dark mode regression is fixed (#205)
See https://github.com/jenkinsci/pipeline-stage-view-plugin/pull/146#issuecomment-1029704850

--- a/ui/src/main/js/view/templates/pipeline-staged.less
+++ b/ui/src/main/js/view/templates/pipeline-staged.less
@@ -368,7 +368,6 @@
         box-shadow:0 0 0 1px rgba(0,0,0,.1);
         border-radius:4px;
         z-index: 2;
-        text-shadow: 1px 1px 3px rgba(256,256,256,0.5), -1px 2px 3px rgba(256,256,256,0.5), -1px -1px 3px rgba(256,256,256,0.5), 1px -1px 3px rgba(256,256,256,0.5);
       }
 
       .status {
